NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Base_Weight__c</fullName>
    <label>Base Weight</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>