NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Category__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Category__c</fullName>
    <formula>IF(NATT_P_N__c = &apos;Other Warranty&apos;, &apos;Warranty&apos;, TEXT(SBQQ__ProductOption__r.SBQQ__Feature__r.SBQQ__Category__c))</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>