NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Cost_Correction_Factor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Correction_Factor__c</fullName>
    <label>Cost Correction Factor</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>