NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Customer_Part_number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Part_number__c</fullName>
    <label>Customer Part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>