NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Feature__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Feature__c</fullName>
    <formula>IF(NATT_P_N__c = &apos;Other Warranty&apos;, &apos;Other Warranty&apos;,SBQQ__ProductOption__r.SBQQ__Feature__r.Name)</formula>
    <label>Feature</label>
    <type>Text</type>
</CustomField>