NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Feature_Option_Map__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Feature_Option_Map__c</fullName>
    <label>Feature Option Map</label>
    <type>TextArea</type>
</CustomField>