NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Container_IsBundleProduct__c.field-meta.xml
<CustomField>
    <fullName>Container_IsBundleProduct__c</fullName>
    <description>Determines if the bundle product</description>
    <formula>IF( ISBLANK(SBQQ__OptionLevel__c) &amp;&amp; SBQQ__Bundle__c = true, true, false)</formula>
    <label>IsBundleProduct</label>
    <type>Checkbox</type>
</CustomField>