NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Price__c</fullName>
    <description>List price from product</description>
    <label>Product List Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>