NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Material_Cost__c</fullName>
    <label>Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>