NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Model_Number__c</fullName>
    <description>This field is used to store the model number for selected product.</description>
    <inlineHelpText>This field is used to store the model number for selected product.</inlineHelpText>
    <label>Model Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>