NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_Unit_Price__c</fullName>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>