NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Option_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Option_Type__c</fullName>
    <description>Twin Field from product option</description>
    <label>Option Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Special Requirements</fullName>
            </value>
            <value>
                <fullName>Reserves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>