NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Optional_SKU__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Optional_SKU__c</fullName>
    <formula>SBQQ__ProductOption__r.SBQQ__OptionalSKU__r.Name</formula>
    <label>Optional SKU</label>
    <type>Text</type>
</CustomField>