NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_PID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PID__c</fullName>
    <description>This field is used to store PID for selected product.</description>
    <inlineHelpText>This field is used to store PID for selected product.</inlineHelpText>
    <label>PID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>