NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Number__c</fullName>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>