NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Rework__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Rework__c</fullName>
    <formula>IF(CONTAINER_Reworked__c, &apos;Reworked&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rework</label>
    <type>Text</type>
</CustomField>