NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Reworked__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Reworked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reworked</label>
    <type>Checkbox</type>
</CustomField>