NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Total_Contract_Obligation__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Contract_Obligation__c</fullName>
    <label>Total Contract Obligation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>