NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CONTAINER_Warranty_Years__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Years__c</fullName>
    <description>Get value from NATT_P_N__c and concat YR</description>
    <formula>IF(NATT_P_N__c = &apos;Other Warranty&apos;, CONTAINER_Warranty_Description__c ,
IF(NOT(ISBLANK(NATT_P_N__c)), NATT_P_N__c &amp; &apos; YR&apos;, &apos;&apos;))</formula>
    <label>Warranty Years</label>
    <type>Text</type>
</CustomField>