NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Country_Price_Reference__c.field-meta.xml
<CustomField>
    <fullName>Country_Price_Reference__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Owner:User.Default_List_Price_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Reference</label>
    <type>Text</type>
</CustomField>