NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Actual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Actual_Unit_Price__c</fullName>
    <label>Actual Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>