NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Current_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Current_Exchange_Rate__c</fullName>
    <formula>$CustomMetadata.CTBR_Exchange_Rate__mdt.CTBR_Units.Current_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>