NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_CustomFeesPercentOfGlobalParameter__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CustomFeesPercentOfGlobalParameter__c</fullName>
    <label>Custom Fees Percent Of Global Parameter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>