NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Deductibles__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Deductibles__c</fullName>
    <formula>TEXT(CTBR_Major_Component_Deductible__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Deductibles</label>
    <type>Text</type>
</CustomField>