NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_DiscountPercentInCustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CTBR_DiscountPercentInCustomerGroup__c</fullName>
    <label>Discount Percent In Customer Group</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>