NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_ExchangeTaxOfTheQuoteCreation__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ExchangeTaxOfTheQuoteCreation__c</fullName>
    <label>Exchange Tax Of The Quote Creation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>