NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_FreightPercentOfGlobalParameter__c.field-meta.xml
<CustomField>
    <fullName>CTBR_FreightPercentOfGlobalParameter__c</fullName>
    <label>Freight Percent Of Global Parameter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>