NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Group_Name__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>