NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_IcmsTax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_IcmsTax__c</fullName>
    <label>ICMS Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>