NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_ItemQuantityAvailableForSales__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ItemQuantityAvailableForSales__c</fullName>
    <label>Item Quantity Available For Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>