NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_List_Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>CTBR_List_Unit_Price_USD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CTBR List Unit Price (USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>