NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_List_Unit_Pricing_BRL__c.field-meta.xml
<CustomField>
    <fullName>CTBR_List_Unit_Pricing_BRL__c</fullName>
    <formula>IF(NATT_Quote_Recordtype_Dev_Name__c = &apos;CTBR_BluEdge&apos;, CTBR_List_Unit_Price_USD__c*CTBR_Previous_Exchange_Rate__c, CTBR_List_Unit_Price_USD__c*CTBR_Current_Exchange_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR List Unit Pricing (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>