NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Major_Component_Deductible_Override__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Major_Component_Deductible_Override__c</fullName>
    <label>CTBR Major Component Deductible Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Deductible</valueSetName>
    </valueSet>
</CustomField>