NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Major_Component_Months__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Major_Component_Months__c</fullName>
    <label>CTBR Major Component Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>