NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_MaterialGroupPercent__c.field-meta.xml
<CustomField>
    <fullName>CTBR_MaterialGroupPercent__c</fullName>
    <label>Material Group Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>