NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_NCM__c.field-meta.xml
<CustomField>
    <fullName>CTBR_NCM__c</fullName>
    <label>NCM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>