NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_NetTotalPlusPriceIpiTax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_NetTotalPlusPriceIpiTax__c</fullName>
    <label>Net Total + Price IPI(Tax)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>