NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_NetValueInDollar__c.field-meta.xml
<CustomField>
    <fullName>CTBR_NetValueInDollar__c</fullName>
    <label>Net Value In Dollar</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>