NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_PercentageIpiTax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_PercentageIpiTax__c</fullName>
    <label>Percentage IPI(Tax)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>