NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_PisTax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_PisTax__c</fullName>
    <label>PIS Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>