NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_ProductImage__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ProductImage__c</fullName>
    <formula>IF(NOT ISBLANK(SBQQ__Product__r.SBQQ__ProductPictureID__c),IMAGE(&apos;/servlet/servlet.ImageServer?id=&apos;+SBQQ__Product__r.SBQQ__ProductPictureID__c+&apos;&amp;oid=&apos;+$Organization.Id,&apos;Product Image&apos;, 200, 200),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR ProductImage</label>
    <type>Text</type>
</CustomField>