NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Purchase_Number_Optional__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Purchase_Number_Optional__c</fullName>
    <label>Purchase Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>