NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Purchase_Number_U_IB_OrdemCompra__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Purchase_Number_U_IB_OrdemCompra__c</fullName>
    <label>Purchase Number (U_IB_OrdemCompra)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>