NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_RealNetValue__c.field-meta.xml
<CustomField>
    <fullName>CTBR_RealNetValue__c</fullName>
    <label>Real Net Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>