NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>