NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_TotalTax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_TotalTax__c</fullName>
    <description>sum of ICMS Tax, PIS Tax, Cofins Tax</description>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>