NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit_of_Measurement__c</fullName>
    <formula>TEXT(SBQQ__Product__r.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measurement</label>
    <type>Text</type>
</CustomField>