NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTBR_UnitPrice_Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>CTBR_UnitPrice_Lookup_Key__c</fullName>
    <formula>IF(
ISBLANK(TEXT(SBQQ__Quote__r.CTBR_Warehouse__c)),
&quot;&quot;,
IF(
TEXT(SBQQ__Quote__r.CTBR_Warehouse__c) =SBQQ__Quote__r.SBQQ__BillingState__c,
CASE(
TEXT(SBQQ__Quote__r.CTBR_Warehouse__c),
&quot;CTB02&quot;, &quot;1&quot;,
&quot;CTB01&quot;, &quot;2&quot;,
&quot;Santa Catarina&quot;, &quot;3&quot;,
&quot;0&quot;
),
&quot;4&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR UnitPrice Lookup Key</label>
    <type>Text</type>
</CustomField>