NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTM_End_Customer_Total_Price_QD__c.field-meta.xml
<CustomField>
    <fullName>CTM_End_Customer_Total_Price_QD__c</fullName>
    <formula>IF(SBQQ__ProductOption__r.SBQQ__Feature__r.Name = &apos;HOST UNIT&apos;, SBQQ__RequiredBy__r.NATT_Net_End_Customer_Price__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTM End Customer Total Price QD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>