NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTM_Product_Name_Quote_Document__c.field-meta.xml
<CustomField>
    <fullName>CTM_Product_Name_Quote_Document__c</fullName>
    <formula>IF(
AND(
SBQQ__ProductCode__c = &apos;NV86-CH&apos;,
OR(SBQQ__RequiredBy__r.SBQQ__ProductName__c = &apos;VECTOR 8600 - SYSTEM 01&apos;, SBQQ__RequiredBy__r.SBQQ__ProductName__c = &apos;VECTOR 8600 - SYSTEM 16&apos;),
SBQQ__ProductOption__r.SBQQ__Feature__r.Name = &apos;Host Unit&apos;), 
SBQQ__RequiredBy__r.SBQQ__ProductName__c + &apos; - &apos; +  SBQQ__ProductName__c,  

IF(
AND(
NOT(OR(SBQQ__RequiredBy__r.SBQQ__ProductName__c = &apos;VECTOR 8600 - SYSTEM 01&apos;, SBQQ__RequiredBy__r.SBQQ__ProductName__c = &apos;VECTOR 8600 - SYSTEM 16&apos;)),
SBQQ__ProductOption__r.SBQQ__Feature__r.Name = &apos;Host Unit&apos;), 
SBQQ__RequiredBy__r.SBQQ__ProductName__c + &apos; - &apos; +  SBQQ__ProductName__c, 
SBQQ__ProductName__c))</formula>
    <label>CTM Product Name Quote Document</label>
    <type>Text</type>
</CustomField>