NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CTM_Special_Unit__c.field-meta.xml
<CustomField>
    <fullName>CTM_Special_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Unit</label>
    <type>Checkbox</type>
</CustomField>